--- a/team81.html
+++ b/team81.html
@@ -11,9 +11,9 @@
 
     <h2>Team Members</h2>
     <ul>
-        <li>Sai Teja Labba - saitejalabba@gmail.com</li>
-        <li>Madhumitha Aravelli - madhumithaaravelli@gmail.com</li>
-        <li>Jaya Shruti Chintalapati - Jayashrutichintalapati@gmail.com</li>
+        <li>Sai Teja Labba - <a href="mailto:saitejalabba@gmail.com">saitejalabba@gmail.com</a></li>
+        <li>Madhumitha Aravelli - <a href="mailto:madhumithaaravelli@gmail.com">madhumithaaravelli@gmail.com</a></li>
+        <li>Jaya Shruti Chintalapati - <a href="mailto:Jayashrutichintalapati@gmail.com">Jayashrutichintalapati@gmail.com</a></li>
     </ul>
 </body>
 </html>
